--- a/Finals/index.html
+++ b/Finals/index.html
@@ -41,9 +41,9 @@
     
   </div> 
 </div> 
-  <div class = "Something text-center" id="p3">
+  <div class = "Syllabus text-center" id="p3">
     <div class = "paddingTop">
-      <h2>SOMETHING</h2>
+      <h2>Syllabus</h2>
     </div>
     <!--insert-->
   </div>
