--- a/Finals/index.html
+++ b/Finals/index.html
@@ -27,10 +27,41 @@
       <li class = "pull-right"><a href="#p3">Notes</a></li>
       <li class = "pull-right"><a href="#p4">Home</a></li>
   </ul>
-  <div class = "jambotron text-center">
-  <h1>Learn Web Scripting and Web Security</h1>
+    
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Indicators -->
+  <ol class="carousel-indicators">
+    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#myCarousel" data-slide-to="1"></li>
+    <li data-target="#myCarousel" data-slide-to="2"></li>
+  </ol>
+
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <div class="item active">
+      <img src="images/img1.jpg" alt="">
+    </div>
+
+    <div class="item">
+      <img src="images/img2.png" alt="">
+    </div>
+
+    <div class="item">
+      <img src="images/img3.jpg" alt="">
+    </div>
   </div>
-  </div>
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+</div>
 
 <div class = "Overview" id="p2">
   <div class = "row">
@@ -44,7 +75,24 @@
   <div class = "Syllabus text-center" id="p3">
     <div class = "paddingTop">
       <h2>Syllabus</h2>
-    </div>
+        <div class="row">
+            <div class="col-sm-4">
+              <h3>Server-Side Scripting</h3>
+              <p>Lorem</p>
+              <p>Lorem</p>
+            </div>
+            <div class="col-sm-4">
+              <h3>Server-Side Scripting</h3>
+              <p>Lorem ipsum dolor..</p>
+              <p>Server-Side Scripting</p>
+            </div>
+            <div class="col-sm-4">
+              <h3>Server-Side Scripting</h3> 
+              <p>Lorem ipsum dolor..</p>
+              <p>Ut enim ad..</p>
+            </div>
+          </div>
+        </div>
     <!--insert-->
   </div>
 
@@ -53,8 +101,8 @@
   </div>
 </div>
     <!--Scripts-->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+       <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     </body>
 </html>
