--- a/bootstrap-4.1/marzan.html
+++ b/bootstrap-4.1/marzan.html
@@ -22,8 +22,8 @@
 				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
 				<div class="icon1 pt-3">
-					<i class="fas fa-file-alt"> </i>&nbsp 4 videos, 5 readings &nbsp<span class="c1" data-toggle="collapse" data-target="#expand">expand</span>
-					<div id="expand" class="collapse pt-2">
+					<i class="fas fa-file-alt"> </i>&nbsp 4 videos, 5 readings &nbsp<span class="c1" data-toggle="collapse" data-target="#expand1">expand</span>
+					<div id="expand1" class="collapse pt-2">
 						<ol>
 							<li><strong>Reading:</strong> Mark Kenneth</li>
 							<li><strong>Video:</strong> Marzan</li>
@@ -51,8 +51,8 @@
 				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
 				<div class="icon1 pt-3">
-					<i class="fas fa-file-alt"> </i>&nbsp 4 videos, 5 readings &nbsp<span class="c1" data-toggle="collapse" data-target="#expand">expand</span>
-					<div id="expand" class="collapse pt-2">
+					<i class="fas fa-file-alt"> </i>&nbsp 4 videos, 5 readings &nbsp<span class="c1" data-toggle="collapse" data-target="#expand2">expand</span>
+					<div id="expand2" class="collapse pt-2">
 						<ol>
 							<li><strong>Reading:</strong> Mark Kenneth</li>
 							<li><strong>Video:</strong> Marzan</li>
@@ -80,8 +80,8 @@
 				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
 				<div class="icon1 pt-3">
-					<i class="fas fa-file-alt"> </i>&nbsp 4 videos, 5 readings &nbsp<span class="c1" data-toggle="collapse" data-target="#expand">expand</span>
-					<div id="expand" class="collapse pt-2">
+					<i class="fas fa-file-alt"> </i>&nbsp 4 videos, 5 readings &nbsp<span class="c1" data-toggle="collapse" data-target="#expand3">expand</span>
+					<div id="expand3" class="collapse pt-2">
 						<ol>
 							<li><strong>Reading:</strong> Mark Kenneth</li>
 							<li><strong>Video:</strong> Marzan</li>
@@ -109,8 +109,8 @@
 				Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.
 
 				<div class="icon1 pt-3">
-					<i class="fas fa-file-alt"> </i>&nbsp 4 videos, 5 readings &nbsp<span class="c1" data-toggle="collapse" data-target="#expand">expand</span>
-					<div id="expand" class="collapse pt-2">
+					<i class="fas fa-file-alt"> </i>&nbsp 4 videos, 5 readings &nbsp<span class="c1" data-toggle="collapse" data-target="#expand4">expand</span>
+					<div id="expand4" class="collapse pt-2">
 						<ol>
 							<li><strong>Reading:</strong> Mark Kenneth</li>
 							<li><strong>Video:</strong> Marzan</li>
