--- a/bootstrap-4.1/quiz1.html
+++ b/bootstrap-4.1/quiz1.html
@@ -74,12 +74,26 @@
                     <div class="row mt-3">
                         <div class="col-md-12 withBorder p-0">
                             <div class="quiz">
-                                <p>QUIZ</p>
-                                <h1 id="high">INTRODUCTION</h1>
-                                <p>10 QUESTIONS</p>
-                                <div class="obj">Objective: <span>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </span></div>
-                                <button type="button" class="btn btn-primary"><a href="quiz1.html">Start</a></button>
-                                
+                                <p>QUIZ: Server Side Scripting</p>
+                                	<div class="row">
+                                        <div class="col-sm-12">
+                                            <div id="result" class="quiz-body">
+                                            <form name="quizForm" onSubmit="">
+                                                <fieldset class="form-group">
+                                                <h4><span id="qid">1.</span> <span id="question"></span></h4>
+
+                                                <div class="option-block-container" id="question-options">
+
+                                                 </div> <!-- End of option block -->
+                                                 </fieldset>
+                                                 <button  name="previous" id="previous" class="btn btn-success">Previous</button>
+                                                 &nbsp;
+                                                 <button  name="next" id="next" class="btn btn-success">Next</button>
+                                           </form>
+                                           </div>
+                                        </div> <!-- End of col-sm-12 -->
+
+                                    </div> <!-- End of row -->
                             </div>
                         </div>
                     </div>
@@ -97,7 +111,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
         <!-- jQuery Custom Scroller CDN -->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
-
+         <script  src="js/index.js"></script>
         <script type="text/javascript">
             $(document).ready(function () {
                 $("#sidebar").mCustomScrollbar({
