--- a/bootstrap-4.1/quiz1.html
+++ b/bootstrap-4.1/quiz1.html
@@ -37,16 +37,16 @@
                         </ul>
                     </li> -->
                     <li>
-                        <a href="quiz.html">Server Side Scripting</a>
+                        <a href="quiz.html">Server-Side Web Scripting Technologies</a>
                     </li>
                     <li>
                         <a href="#">PHP</a>
                     </li>
                     <li>
-                        <a href="#">Javascript</a>
+                        <a href="#">Server-Side Javascript With Node JS</a>
                     </li>
                     <li>
-                        <a href="#">JSP</a>
+                        <a href="#">Java Web Servlet and JSP</a>
                     </li>
                     
                 </ul>
