Added contens in JSON files

--- a/Webtechlec/quiz.html
+++ b/Webtechlec/quiz.html
@@ -37,18 +37,20 @@
                         </ul>
                     </li> -->
                     <li>
-                        <a href="quiz.html">Server-Side Web Scripting Technologies</a>
+                        <a href="sswst.php">Server-Side Web Scripting Technologies</a>
                     </li>
                     <li>
-                        <a href="#">PHP</a>
+                        <a href="phpquiz.php">PHP</a>
                     </li>
                     <li>
-                        <a href="#">Server-Side Javascript With Node JS</a>
+                        <a href="ssjwnj.php">Server-Side Javascript With Node JS</a>
                     </li>
                     <li>
-                        <a href="#">Java Web Servlet and JSP</a>
+                        <a href="sjspquiz.php">Java Web Servlet and JSP</a>
                     </li>
-                    
+                    <li>
+                        <a href="owaspquiz.php">OWASP Top 10: Web Security</a>
+                    </li>
                 </ul>
 
             </nav>
@@ -74,10 +76,14 @@
                     <div class="row mt-3">
                         <div class="col-md-12 withBorder p-0">
                             <div class="quiz">
-                                <p>QUIZ</p>
-                                <h1 id="high">INTRODUCTION</h1>
+                                <h1 id="high">[Quiz] Let's have some fun and do this Challenge! </h1>
                                 <p>10 QUESTIONS</p>
-                                <div class="obj">Objective: <span>Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. </span></div>
+                                <div class="obj">Objective: <p></p>
+                                <p>- To improve transder of knowledge to new context</p>
+                                <p>- To learn and enhance your knowledge</p>
+                                <p>- To identify gaps to the user's knowledge</p>
+                                <p>- To encourage the students to study</p>
+                                </div>
                                 <button type="button" class="btn btn-primary"><a href="quiz1.html">Start</a></button>
                                 
                             </div>
